<resources>
    <string name="app_name"> همراه بانک حکمت</string>
    <string name="setting">تنظیمات</string>
    <string name="firstStar">همراه بانک حکمت ایرانیان</string>
    <string name="confirmation">تایید</string>
    <string name="wellCome">به ستاره اول خوش آمدید</string>
    <string name="userName">نام کاربری</string>
    <string name="passWord">رمز عبور</string>
    <string name="ForgotPassword">فراموشی رمز عبور</string>
    <string name="doNotRegister">تا حالا ثبت نام نکرده اید؟</string>
    <string name="phoneNumber">شماره همراه :</string>
    <string name="type_of_sharj">نوع شارژ :</string>
    <string name="amount">مبلغ :</string>
    <string name="cancel">لغو</string>
    <string name="select_type_of_charge">نوع شارژ را انتخاب نمایید</string>
    <string name="registration_card">ثبت کارت در لیست کارت ها</string>
    <string name="card_name">نام کارت</string>
    <string name="expiration_date">تاریخ انقضا</string>
    <string name="card_number">شماره کارت</string>
    <string name="search">جست و جو</string>
    <string name="addilng_bills">افزودن قبض</string>
    <string name="End_of_session">پایان دوره</string>
    <string name="mid_term">میان دوره</string>
    <string name="Continual">دائمی</string>
    <string name="credit">اعتباری</string>
    <string name="chose_state">انتخاب استان</string>
    <string name="choice_number">انتخاب سرشماره</string>
    <string name="number_choise">انتخاب شماره</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="id">شماره شناسنامه</string>
    <string name="place_of_birth">محل صدور</string>
    <string name="national_code">کد ملی</string>
    <string name="male">مرد</string>
    <string name="fmale">زن</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="mci_phone_number">تلفن همراه اول</string>
    <string name="phone_number">تلفن تماس</string>
    <string name="post_code">کد پستی ده رقمی</string>
    <string name="email">پست الکترونیک</string>
    <string name="post_address">آدرس پستی</string>
    <string name="father_name">نام پدر</string>

    <!-- Guid -->
    <string name="pay_bills">پرداخت قبوض</string>
    <string name="other_bills">سایر قبوض</string>
    <string name="credit_card_charge">شارژ سیم کارت اعتباری</string>
    <string name="internet_pack">بسته اینترنت</string>
    <string name="sale_sim">فروش سیم کارت</string>

    <string name="supply">موجودی :</string>
    <string name="manage_cards">مدیریت کارت ها</string>
    <string name="Introduction_to_firends">معرفی به دوستان</string>
    <string name="about_us">درباره ما</string>
    <string name="leaving_the_app">خروج از برنامه</string>


    <string name="charge_type">نوع شارژ</string>
    <string name="charge_amount">مبلغ</string>

    <string name="payment_method">نحوه ی پرداخت</string>
    <string name="mci">همراه اول</string>
    <string name="law">ضوابط و قرارداد اشتراک تلفن های همراه</string>
    <string name="active_code">کد فعالسازی :</string>
    <string name="adding_to_list">افزودن به لیست</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="pay_id">شناسه پرداخت</string>
    <string name="pay_bill_amount">مبلغ</string>
    <string name="setare_aval_law">تمامی حقوق این نرم افزار متعلق به ستاره اول می باشد</string>
    <string name="design_by_dp">طراحی و پیاده سازی داده پرداز پویا ی شریف</string>
    <string name="web_site_Address">WWW.SETAREAVAL.IR</string>
    <string name="first_starphone_number">021 - 88888888</string>
    <string name="first_star_copy">نسخه</string>
    <string name="copy1">1.0</string>
    <string name="quick_access">دسترسی سریع</string>
    <string name="enter_your_email">برای شروع، شماره موبایل خود را وارد کنید.</string>
    <string name="login_phone_number">شماره موبایل</string>
    <string name="enter_activation_code">کد فعال سازی ارسال شده را وارد نمایید.</string>
    <string name="activation_code">کد فعالسازی</string>
    <string name="send_code_activation_again">ارسال مجدد</string>
    <string name="doubleClickForExit">لطفا برای خروج دوبار کلیک کنید</string>
    <string name="pay">پرداخت</string>
    <string name="user_profile">پروفایل کاربری</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="rial">ریال</string>
    <string name="title_activity_favorite_list">FavoriteListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_adapter_favorite_list">AdapterFavoriteList</string>
    <string name="charge_card">شارژ سیم کارت اعتباری</string>

    <string name="favorite_list">لیست علاقه مندی ها</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_check_supply">CheckSupplyActivity</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_activity_check_suplly_card">CheckSupllyCardActivity</string>
    <string name="adding_new_card">افزودن کارت جدید</string>
    <string name="entry_info">ورود اطلاعات</string>
    <string name="destination_card">اطلاعات کارت مقصد  </string>
    <string name="register_in_card_list">ثبت کارت در لیست کارت ها</string>
    <string name="second_password">رمز دوم</string>
    <string name="card_to_card_price">مبلغ </string>
    <string name="enter_your_wallet_password">لطفا رمز دوم خود را وارد نمایید</string>
    <string name="wallet_password">رمز کارت</string>
    <string name="title_activity_money_transfer">MoneyTransfer</string>
    <string name="check">پیگیری چک</string>
    <string name="title_activity_cardto_card">CardtoCard</string>
    <string name="title_activity_pay_bills">PayBillsActivity</string>
    <string name="adding_to_favorite">افزودن به علاقه مندی</string>
    <string name="booklet_phone">دفترچه تلفن</string>
    <string name="favorite">علاقه مندی ها</string>
    <string name="my_number">شماره خودم</string>
    <string name="company_name">شرکت توزیع نیروی برق</string>
    <string name="pay_mci_bills">پرداخت قبوض همراه اول</string>
    <string name="mci_bills"> پرداخت قبوض همراه اول</string>
    <string name="pay_bills_with_id">پرداخت قبوض شناسه دار</string>
    <string name="accessibility_service_description">اجازه دسترسی</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>