<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_dialog_tittle_curve">

        <com.bank24.hi.hekmatbank.ui.DPTextView
            android:id="@+id/dialog_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/charge_sim_padding_txt"
            android:text="@string/enter_your_wallet_password"
            android:textSize="@dimen/normal_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/back_dialog_bottom_curve">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_counter"
            android:layout_marginRight="@dimen/main_marginLR"
            android:layout_marginLeft="@dimen/main_marginLR"
            android:background="@drawable/back_buttons_light_gray">

            <com.bank24.hi.hekmatbank.ui.DPEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:background="@null"
                android:textSize="@dimen/normal_size"
                android:paddingRight="@dimen/charge_sim_padding_txt"
                android:paddingLeft="@dimen/charge_sim_padding_txt"
                android:textColorHint="@color/background"
                android:hint="@string/wallet_password"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/charge_sim_padding_txt"
                android:paddingBottom="@dimen/charge_sim_padding_txt"
                android:textColor="@color/txt_dark_gray"
                android:id="@+id/dialog_entry_info_edit_wallet_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>

            <com.bank24.hi.hekmatbank.ui.rippleView.RippleView
                rv_centered="true"
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_buttons_red"
                android:gravity="center"
                ripple:rv_centered="true"
                ripple:rv_color="@color/white"
                ripple:rv_rippleDuration="100"
                ripple:rv_type="rectangle"
                ripple:rv_zoom="true"
                android:layout_marginTop="@dimen/marginTop_counter"
                android:layout_marginBottom="@dimen/marginTop_counter"
                android:id="@+id/dialog_entry_info_btn_confirmation">

                <com.bank24.hi.hekmatbank.ui.DpButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_btn"
                    android:paddingBottom="@dimen/padding_btn"
                    android:text="@string/confirmation"
                    android:textSize="@dimen/normal_size"
                    android:textColor="@color/white" />

            </com.bank24.hi.hekmatbank.ui.rippleView.RippleView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>